apps/base/home-frigate/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-frigate
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
