apps/base/home-frigate/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  ports:
  - port: 5000
    name: http
  - port: 8554
    name: rtsp
  - port: 8555
    name: webrtc
  selector:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/component: frigate
