apps/base/home-frigate/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/name: Frigate
    gethomepage.dev/description: Complete and local NVR designed for Home Assistant with AI object detection
    gethomepage.dev/icon: frigate
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=frigate"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - frigate.home.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: frigate.home.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate
            port:
              name: http
